# tools

./: .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.devcontainer/build-devcontainer/: Dockerfile
.github/: RELEASE_CHECKLIST.md  renovate.json5
.github/actions/create-lint-wf/: action.yml
.github/snapshots/: default.nf.test.snap  gpu.nf.test.snap
.github/workflows/: branch.yml  changelog.py  changelog.yml  clean-up.yml  create-lint-wf.yml  create-test-lint-wf-template.yml  create-test-wf.yml  deploy-pypi.yml  fix-linting.yml  lint-code.yml  nextflow-source-test.yml  push_dockerhub.yml  pytest.yml  sync.yml  test_offline_configs.yml  tools-api-docs.yml  update-template-snapshots.yml  update-textual-snapshots.yml
docs/api/: check_lint_docstrings.py  generate-api-docs.sh
docs/api/_src/: conf.py
nf_core/: .pre-commit-prettier-config.yaml  __main__.py  commands_modules.py  commands_pipelines.py  commands_subworkflows.py  synced_repo.py  utils.py
nf_core/components/: components_command.py  components_completion.py  components_differ.py  components_test.py  components_utils.py  create.py  info.py  install.py  nfcore_component.py  patch.py  remove.py  update.py
nf_core/components/lint/: __init__.py
nf_core/module-template/: main.nf
nf_core/module-template/tests/: main.nf.test.j2
nf_core/modules/: bump_versions.py  modules_json.py  modules_repo.py  modules_utils.py
nf_core/modules/lint/: __init__.py  environment_yml.py  main_nf.py  meta_yml.py  module_changes.py  module_deprecations.py  module_tests.py  module_todos.py  module_version.py
nf_core/pipeline-template/: .prettierignore  README.md  main.nf  modules.json  nextflow.config  nextflow_schema.json
nf_core/pipeline-template/conf/: base.config
nf_core/pipeline-template/docs/: CONTRIBUTING.md  usage.md
nf_core/pipeline-template/tests/: default.nf.test
nf_core/pipeline-template/workflows/: pipeline.nf
nf_core/pipelines/: bump_version.py  containers_utils.py  create_logo.py  launch.py  lint_utils.py  list.py  params_file.py  refgenie.py  rocrate.py  schema.py  sync.py
nf_core/pipelines/create/: create.py  finaldetails.py  githubrepo.py  template_features.yml  utils.py  welcome.py
nf_core/pipelines/download/: container_fetcher.py  docker.py  download.py  singularity.py  utils.py  workflow_repo.py
nf_core/pipelines/lint/: __init__.py  actions_awsfulltest.py  actions_awstest.py  actions_nf_test.py  actions_schema_validation.py  configs.py  container_configs.py  files_exist.py  files_unchanged.py  modules_json.py  multiqc_config.py  nextflow_config.py  nf_test_content.py  plugin_includes.py  readme.py  schema_description.py  system_exit.py  template_strings.py  version_consistency.py
nf_core/subworkflows/lint/: __init__.py  main_nf.py  meta_yml.py  subworkflow_changes.py  subworkflow_if_empty_null.py  subworkflow_tests.py  subworkflow_todos.py  subworkflow_version.py
nf_core/test_datasets/: list.py  test_datasets_utils.py
tests/: conftest.py  test_cli.py  test_lint_utils.py  test_modules.py  test_subworkflows.py  test_utils.py  utils.py
tests/components/: test_components_generate_snapshot.py  test_components_utils.py
tests/data/mock_pipeline_containers/: nextflow.config
tests/modules/: test_bump_versions.py  test_create.py  test_modules_json.py  test_modules_utils.py  test_patch.py  test_remove.py  test_update.py
tests/modules/lint/: test_environment_yml.py  test_lint_utils.py  test_main_nf.py  test_meta_yml.py  test_module_lint_remotes.py  test_patch.py  (+1 more)
tests/pipelines/: test_container_configs.py  test_create.py  test_create_logo.py  test_launch.py  test_lint.py  test_list.py  test_refgenie.py  test_rocrate.py  test_schema.py  test_sync.py
tests/subworkflows/: test_create.py  test_patch.py  test_remove.py  test_update.py
(+37 files in other folders)
